# game_engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE  MAP_DESIGN_GUIDE.md  README.md  SCRIPTING.md  TILE_REFERENCE.md  Twilight_Engine_Guide.md  build.sh  twilight-build.sh
.github/workflows/: language-stats.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: game.json
android/app/src/main/assets/assets/blender/: sample_character.blend  sample_character.blend1
android/app/src/main/assets/assets/dialogue/: elder.dialogue
android/app/src/main/assets/assets/maps/: Forrest.json  New.json  current.json  desert.json  forest.json  house_inside.json  platform_test.json  snow.json  test.json  volcanic.json
android/app/src/main/assets/assets/scripts/: battle_system.sage  bobby.sage  day.sage  debug_api.sage  elder.sage  inventory.sage  merchant.sage  npc_dialogues.sage  patrol.sage  skills.sage  vampire.sage  weather.sage
android/app/src/main/assets/assets/textures/: blender_platformer_tileset_manifest.json  blender_topdown_tileset_manifest.json  cave_manifest.json  (+7 more)
android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
android/app/src/main/res/values/: strings.xml
assets/dialogue/: bobby.dialogue  stranger.dialogue
assets/maps/: test.json
assets/scripts/: bobby.sage  inventory.sage  skills.sage  stranger.sage
assets/scripts/battle/: battle_core.sage
assets/scripts/inventory/: brothers_inventory.sage  dean_inventory.sage
cmake/: CompileShaders.cmake  mingw-w64-toolchain.cmake  vulkan-1.def
docs/: ARCHITECTURE.md  BLENDER_PIPELINE.md  BUILD.md  Battle_System_Comparison.md  CONTROLS.md  EDITOR.md  MAP_DESIGN_GUIDE.md  SCRIPTING.md  TILE_REFERENCE.md  TOOLS.md  Twilight_Engine_Guide.md  UPDATES.md
games/demo/: game.json
games/demo/assets/dialogue/: elder.dialogue  merchant.dialogue
games/demo/assets/maps/: cave.json  current.json  desert.json  forest.json  house_inside.json  platform_test.json  platformer_demo.json  snow.json  volcanic.json
games/demo/assets/scripts/: day.sage  debug_api.sage  elder.sage  merchant.sage  skills.sage
games/demo/assets/scripts/battle/: battle_core.sage  slime_battle.sage
games/demo/assets/scripts/inventory/: inventory_core.sage
games/demo/assets/scripts/lib/: audio.sage  hud.sage
games/demo/assets/scripts/maps/: cave.sage  default.sage  desert.sage  forest.sage  house_inside.sage  platform_test.sage  platformer_demo.sage  snow.sage  volcanic.sage
games/demo/assets/scripts/tests/: test_all.sage
games/demo/assets/textures/: blender_character.json  blender_platformer_stamps.txt  blender_topdown_stamps.txt  blender_topdown_tileset_stamps.txt  cf_stamps.txt  desert_manifest.json  snow_manifest.json  snow_stamps.txt  ui_cute_regions.txt  volcanic_manifest.json  volcanic_stamps.txt
games/demo/assets/textures/2x/: cf_stamps.txt
games/supernatural/: game.json
games/supernatural/assets/dialogue/: azazel.dialogue  vampire.dialogue
games/supernatural/assets/scripts/: azazel.sage  map_events.sage
games/supernatural/assets/scripts/battle/: dean_battle.sage  demon_battle.sage
games/supernatural/assets/scripts/inventory/: battle_inventory.sage  inventory_core.sage  sam_inventory.sage
shaders/: sprite.frag  sprite.vert
src/: main.cpp
src/editor/: imgui_integration.cpp  imgui_integration.h  particle_editor.h  tile_editor.cpp  tile_editor.h  tile_editor_debug.cpp  tile_editor_npc_spawner.cpp  tile_editor_script_ide.cpp  tile_editor_systems.cpp  tile_editor_ui.cpp
src/engine/audio/: audio_engine.cpp  audio_engine.h
src/engine/core/: debug_log.h  engine.cpp  engine.h  noise.h  timer.h  types.h
src/engine/ecs/: ecs.h
src/engine/graphics/: pipeline.cpp  pipeline.h  post_process.h  renderer.cpp  renderer.h  sprite_batch.cpp  sprite_batch.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  vulkan_context.cpp  vulkan_context.h
src/engine/net/: net_common.h
src/engine/physics/: collision.h  raycast.h
src/engine/platform/: input.h  platform.h  platform_android.cpp  platform_android.h  platform_desktop.cpp  platform_desktop.h  touch_controls.cpp  touch_controls.h
src/engine/resource/: file_io.cpp  file_io.h  game_manifest.cpp  game_manifest.h  resource_manager.cpp  resource_manager.h
src/engine/scripting/: mod_loader.h  script_api_map.cpp  script_api_new.cpp  script_api_npc.cpp  script_api_physics.cpp  script_api_platformer.cpp  script_api_player.cpp  script_api_systems.cpp  script_api_ui.cpp  script_engine.cpp  script_engine.h
src/game/: game.cpp  game.h  game_battle.cpp  game_init.cpp  game_io.cpp  game_platformer.cpp  game_render.cpp
src/game/ai/: behavior_tree.h  pathfinding.cpp  pathfinding.h
src/game/dialogue/: dialogue_box.cpp  dialogue_box.h
src/game/overworld/: camera.cpp  camera.h  hex_utils.h  iso_utils.h  tile_map.cpp  tile_map.h
src/game/systems/: checkpoint.h  combo_detector.h  coroutine.h  day_night.cpp  day_night.h  dungeon_gen.h  input_replay.h  level_manager.cpp  level_manager.h  moving_platform.cpp  moving_platform.h  object_pool.h  particles.h  platformer_physics.h  rule_tiles.h  save_system.h  skeleton_anim.h  spawn_system.cpp  spawn_system.h  sprite_anim.h  state_machine.h  survival.cpp  survival.h  trail_renderer.h  trigger_zone.h  tween.h
src/game/ui/: merchant_ui.cpp  merchant_ui.h
tools/: ai_asset_prompts.txt  ai_generate_assets.py  blender_create_sample.py  blender_generate_props.py  blender_generate_tileset.py  blender_render_sprites.py  blender_to_spritesheet.py  explore_full.py  explore_game.py  explore_game2.py  explore_game3.py  extract_tileset.py  fuzz_engine.py  generate_parallax_bg.py  generate_tileset.py  generate_ui_pack.py  import_unreal_assets.py  quick_test.py  rearrange_dean.py  scale_assets.py  wire_biome_levels.py
tools/tw_test/: __init__.py  __main__.py  capture.py  engine.py  harness.py  input_sim.py  keys.py  portal_input.py  window.py
tools/tw_test/scenarios/: __init__.py  smoke_test.py
(+15 files in other folders)
